<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenDelta</string>
    <string name="title">System updates</string>
    <string name="action_networks">Networks</string>
    <string name="title_networks">Auto download networks</string>
    <string name="network_2g" translatable="false" >2G</string>
    <string name="network_3g" translatable="false" >3G</string>
    <string name="network_4g" translatable="false" >4G</string>
    <string name="network_wifi">Wi-Fi</string>
    <string name="network_ethernet">Ethernet</string>
    <string name="network_unknown">Other</string>
    <string name="action_about">About</string>
    <string name="about_content" translatable="false" >
<![CDATA[
        Copyright &copy; _COPYRIGHT_OPENDELTA_ <b>Jorrit \'Chainfire\' Jongma</b><br>
        <br>
        Originally created for <b>The OmniROM Project</b><br>
        <br>
        Licensed under the terms of the <b>GNU General Public License, version 3.0 (GPLv3)</b><br>
        <br>
        Delta decoding based on <b>xdelta</b>, copyright &copy; _COPYRIGHT_XDELTA_ <b>Joshua MacDonald</b><br>
    ]]>
    </string>
    <string name="state_action_none">Your system is up to date</string>
    <string name="state_action_checking">Checking for updates &#8230;</string>
    <string name="state_action_checking_md5">Verifying file &#8230;</string>
    <string name="state_action_searching">Searching for files &#8230;</string>
    <string name="state_action_searching_md5">Verifying file &#8230;</string>
    <string name="state_action_downloading">Downloading &#8230;</string>
    <string name="state_action_applying">Patching &#8230;</string>
    <string name="state_action_applying_patch">Patching &#8230;</string>
    <string name="state_action_applying_md5">Verifying file &#8230;</string>
    <string name="state_action_ready">Update ready to flash</string>
    <string name="state_error_disk_space">Not enough disk space</string>
    <string name="state_error_unknown">Unknown error</string>
    <string name="state_error_unofficial">Update disabled</string>
    <string name="error_disk_space_sub" formatted="false">%d MiB available, %d MiB required</string>
    <string name="notify_update_available">An update is available</string>
    <string name="notify_checking">Checking for update &#8230;</string>
    <string name="last_checked" formatted="false">%s at %s</string>
    <string name="last_checked_never">We\'ve never checked, maybe you would like to do so?</string>
    <string name="button_check_short">Check</string>
    <string name="button_flash_now">Flash</string>
    <string name="state_action_ab_flash">Installing A/B Update &#8230;</string>
    <string name="state_action_ab_finished">Done Installing. Reboot Now &#8230;</string>
    <string name="button_reboot_short">Reboot</string>

    <!-- updates from 2013/12/18 -->

    <string name="action_secure_mode">Secure</string>
    <string name="secure_mode_enabled_title">Secure mode: enabled</string>
    <string name="secure_mode_enabled_description"><![CDATA[The update\'s cryptographic signature will be verified before flashing to confirm its origin, and no additional updates will be flashed. This mode is only compatible with <b>TWRP</b>.]]></string>
    <string name="secure_mode_disabled_title">Secure mode: disabled</string>
    <string name="secure_mode_disabled_description"><![CDATA[Additional updates are flashed if present. Note that any (malicious) software package can place these updates and gain full system access. Caution is advised.]]></string>
    <string name="recovery_notice_title">Notice</string>
    <string name="recovery_notice_description_secure"><![CDATA[Flashing updates in the current mode is only supported on <b>TWRP</b> recoveries. Please make sure you are running a compatible recovery before continuing.]]></string>
    <string name="recovery_notice_description_not_secure"><![CDATA[Flashing updates in the current mode is only officially supported on <b>TWRP</b> recoveries. <i>Official</i> <b>CWM</b> builds are <i>not</i> supported, though some <i>community-built</i> versions of <b>CWM</b> <i>may</i> still work. Please make sure you are running a compatible recovery before continuing.]]></string>
    <string name="flash_after_update_notice_title">Notice</string>
    <string name="flash_after_update_notice_description"><![CDATA[Additional updates are present in the <b>FlashAfterUpdate</b> folder, but secure mode is enabled. If you continue, these additional updates will <b>not</b> be flashed.]]></string>
    <string name="state_error_not_official_title">Update disabled</string>
    <string name="state_error_not_official_extra" formatted="false">Update of %s not possible</string>
    <string name="button_build_delta">Download</string>
    <string name="button_stop">Stop</string>
    <string name="state_action_build">Update available</string>
    <string name="state_action_build_delta">Delta update possible</string>
    <string name="state_action_build_full">Full update possible</string>
    <string name="state_error_download">Download problem</string>
    <string name="text_current_version_header_title">Current version</string>
    <string name="text_last_checked_header_title">Last checked</string>
    <string name="text_update_version_title">Update version</string>
    <string name="text_download_size_header_title">Download size</string>
    <string name="text_download_size_unknown">Unknown</string>
    <string name="auto_download">Schedule</string>
    <string name="auto_download_title">Scheduler action</string>
    <string name="download_disabled">Disabled</string>
    <string name="check_only">Check and notify</string>
    <string name="download_delta">Auto download delta</string>
    <string name="download_full">Auto download all</string>
    <string name="menu_settings">Settings</string>
    <string name="category_download">Auto download</string>
    <string name="charge_only_title">Charger only</string>
    <string name="charge_only_message">Download only when on charger</string>
    <string name="battery_level_title">Min battery percent</string>
    <string name="twenty_five_percent" translatable="false" >25</string>
    <string name="fifty_percent" translatable="false" >50</string>
    <string name="seventy_five_percent" translatable="false" >75</string>
    <string name="notify_title_error">Problem checking for update</string>
    <string name="notify_title_flash">Update ready to flash</string>
    <string name="notify_title_download">Update ready to download</string>
    <string name="notify_eta_remaining"  formatted="false">%2d%%, %02d:%02d remaining</string>
    <string name="last_checked_never_title_new">Press \'Check\' to start</string>
    <string name="screen_state_title">Screen off</string>
    <string name="screen_state_message">Download only when screen is off</string>
    <string name="category_scheduler">Auto update</string>
    <string name="scheduler_mode_title">Scheduler mode</string>
    <string name="scheduler_smart">Smart</string>
    <string name="scheduler_daily">Daily</string>
    <string name="scheduler_weekly">Weekly</string>
    <string name="scheduler_daily_time">Time</string>
    <string name="scheduler_week_day">Day</string>
    <string name="networks_title">Networks</string>
    <string name="networks_message">Download only on networks types</string>
    <string name="category_flashing">Flashing</string>
    <string name="secure_mode_title">Secure mode</string>
    <string name="state_error_connection">No data connection.</string>
    <string name="category_admin">Maintenance</string>
    <string name="clear_files_title">Clean update files</string>
    <string name="clear_files_summary">Delete existing update files to force downloading full update</string>
    <string name="clean_files_feedback" formatted="false">Deleted %d files. Now press \'Check for updates\'</string>
    <string name="state_error_permissions">No storage permissions.</string>
    <string name="state_error_flash">Failed to setup flash. Clean /cache and retry.</string>
    <string name="state_error_ab_flash">Failed to setup flash. Please reboot and retry.</string>
    <string name="progress_status_0">Idle &#8230;</string>
    <string name="progress_status_1">Checking for Updates &#8230;</string>
    <string name="progress_status_2">Update available &#8230;</string>
    <string name="progress_status_3">Installing &#8230;</string>
    <string name="progress_status_4">Verifying &#8230;</string>
    <string name="progress_status_5">Finalizing &#8230;</string>
    <string name="progress_status_6">Updated. Pending Reboot &#8230;</string>
    <string name="progress_status_7">Reporting Error Event &#8230;</string>
    <string name="progress_status_8">Attempting Rollback &#8230;</string>
    <string name="progress_status_9">Disabled.</string>

    <!-- about my phone -->
    <string name="cpu_title">CPU</string>
    <string name="cpu_info">unknown</string>
    <string name="ram_title">RAM</string>
    <string name="ram_info">unknown</string>
    <string name="display_title">DISPLAY</string>
    <string name="display_info">unknown</string>
    <string name="camera_title">CAMERA</string>
    <string name="camera_info">unknown</string>

</resources>
