<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/page_padding_top"
            android:paddingLeft="@dimen/page_padding_left"
            android:paddingRight="@dimen/page_padding_right"
            android:paddingBottom="@dimen/page_padding_bottom"
            android:gravity="start|center_horizontal"
            android:background="?android:attr/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/device_image_imageview"
                    android:layout_width="@dimen/device_picture_width"
                    android:layout_height="@dimen/device_picture_height" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/device_picture_text_separation"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/aboutphone_title"
                android:text="@string/cpu_title"
                android:autoLink="all"/>

            <TextView
                android:id="@+id/cpu_hardware_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/aboutphone_subtitle"
                android:text="@string/cpu_info"
                android:autoLink="all"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding_top"
                style="@style/aboutphone_title"
                android:text="@string/ram_title"
                android:autoLink="all"/>

            <TextView
                android:id="@+id/ram_hardware_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/aboutphone_subtitle"
                android:text="@string/ram_info"
                android:autoLink="all"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding_top"
                style="@style/aboutphone_title"
                android:text="@string/display_title"
                android:autoLink="all"/>

            <TextView
                android:id="@+id/display_hardware_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/aboutphone_subtitle"
                android:text="@string/display_info"
                android:autoLink="all"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding_top"
                style="@style/aboutphone_title"
                android:text="@string/camera_title"
                android:autoLink="all"/>

            <TextView
                android:id="@+id/camera_hardware_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/aboutphone_subtitle"
                android:text="@string/camera_info"
                android:autoLink="all"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="false"
        android:alwaysDrawnWithCache="false"
        android:layout_marginBottom="16dp"
        android:background="@drawable/switchbar_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/title_margin"
            android:layout_weight="1"
            android:gravity="start"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:weightSum="3" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/text_last_checked_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/text_last_checked_header_title"
                    android:text="@string/text_last_checked_header_title"
                    android:textAppearance="@android:style/TextAppearance.Material.Menu"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/text_last_checked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_last_checked_header"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:textColor="?android:attr/textColorPrimary"/>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_update_version_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="top"
                        android:text="@string/text_update_version_title"
                        android:textAppearance="@android:style/TextAppearance.Material.Menu"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:id="@+id/text_update_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/text_update_version_header"
                        android:layout_below="@+id/text_update_version_header"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:id="@+id/text_download_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/text_update_version"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:id="@+id/progress_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/text_download_size"
                        android:layout_marginTop="20dp"
                        android:ellipsize="marquee"
                        android:maxLines="1"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textColor="?android:attr/textColorPrimary" />

                    <LinearLayout
                        android:id="@+id/progress_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/progress_text"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/progress_bar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:max="1"
                            android:progress="0" />

                        <ImageButton
                            android:id="@+id/button_stop"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/button_stop"
                            android:onClick="onButtonStopClick"
                            android:src="@android:drawable/ic_menu_close_clear_cancel" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/progress_container"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/progress_percent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/progress_text"
                            android:gravity="start"
                            android:maxLines="1"
                            android:textAppearance="@android:style/TextAppearance.Material.Small"
                            android:textColor="?android:attr/textColorPrimary" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/progress_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textAppearance="@android:style/TextAppearance.Material.Small"
                            android:textColor="?android:attr/textColorPrimary" />

                        <Space
                            android:id="@+id/progress_end_margin"
                            android:layout_width="32dp"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_extra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:ellipsize="marquee"
                        android:maxLines="2"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textColor="?android:attr/textColorPrimary" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button_flash_now"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:onClick="onButtonFlashNowClick"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/button_flash_now"
                        android:textAppearance="@android:style/TextAppearance.Material.Button" />

                    <Button
                        android:id="@+id/button_build_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:onClick="onButtonBuildNowClick"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/button_build_delta"
                        android:textAppearance="@android:style/TextAppearance.Material.Button" />

                    <Button
                        android:id="@+id/button_check_now"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:onClick="onButtonCheckNowClick"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/button_check_short"
                        android:textAppearance="@android:style/TextAppearance.Material.Button" />

                    <Button
                        android:id="@+id/button_reboot_now"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:onClick="onButtonRebootNowClick"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/button_reboot_short"
                        android:textAppearance="@android:style/TextAppearance.Material.Button" />
                </LinearLayout>
            </LinearLayout>

    </LinearLayout>

</LinearLayout>


